--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   }
